--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 	<body>
 		<!-- Navigation Bar -->
 		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffe0f7;">
-		  <a class="navbar-brand" href="Index.html">
+		  <a class="navbar-brand" href="index.html">
 	      <img src="images/logo.jpg" id="nav-bar-icon" height="80" alt="" loading="lazy">
 	    </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
 					<!-- Card 1 -->
 					<div class="card card-template">
 				    <div class="card-img-left">
-				      <img src="images/pancake.jpg" class="card-img" alt="">
+				      <img src="images/kitty-pancake.jpg" class="card-img" alt="">
 				    </div>
 
 				      <div class="card-body">
@@ -72,7 +72,7 @@
 
 			      <div class="card-body">
 			        <h5 class="card-title">Hot Chocolate</h5>
-			        <p class="card-text">This drink is perfect for you! With whipped cream on top and some special patterns and pictures that you can print on it, you will enjoy this delicious delectable. $25</p>
+			        <p class="card-text">This drink is purrfect for you! With whipped cream on top and some special cat and kitty paw marshmallows that you can dunk in it, you will enjoy this famishing drink. $25</p>
 			        <p>
 
 			        	<!-- Collapse Button  -->
