--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<!-- Navigation Bar --> 
 		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffe0f7;">
-		  <a class="navbar-brand" href="Index.html">
+		  <a class="navbar-brand" href="index.html">
 		      <img src="images/logo.jpg" id="nav-bar-icon" height="80" alt="" loading="lazy">
 		    </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
