--- a/menu.html
+++ b/menu.html
@@ -27,6 +27,9 @@
 		      <li class="nav-item active">
 		        <a class="nav-link" href="menu.html">Menu<span class="sr-only">(current)</span></a>
 		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="location.html">Location</a>
+		      </li>
 		    </ul>
 		  </div>
 		</nav>
