--- a/promotion-home.html
+++ b/promotion-home.html
@@ -26,6 +26,9 @@
 			      <li class="nav-item">
 			        <a class="nav-link" href="menu.html">Menu</a>
 			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="location.html">Location</a>
+			      </li>
 			    </ul>
 			  </div>
 			</nav>
